# uc_core

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: pytest.yml
src/uc_core/: __init__.py  _const.py  ast.py  ast_legacy.py  ast_optimizer.py  ast_optimizer_legacy.py  backend.py  c23_parser.py  codegen_helpers.py  frontend.py  frontend_legacy.py  lexer.py  parser.py  preprocessor.py  tokens.py  type_config.py
src/uc_core/data/: c23.json
tests/: test_ast_optimizer.py  test_dos_pragmas.py  test_dos_tolerance.py  test_smoke.py  test_type_config.py
