[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uc_core"
version = "0.1.0"
description = "Shared C23 frontend and AST optimizer for the uc80/uc386 family of retro C compilers"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    {name = "uc_core developers"}
]
keywords = [
    "compiler", "c", "c23", "frontend", "ast", "retro-computing"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
]

[project.urls]
Homepage = "https://github.com/avwohl/uc_core"
Repository = "https://github.com/avwohl/uc_core"
Issues = "https://github.com/avwohl/uc_core/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
uc_core = ["py.typed"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
